# nimgen

./: .flake8  .gitignore  AUTHORS.rst  README.md  api.html  codecov.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: ci.yml  lint.yml
_downloads/0225898bfbe5743934e64e00f12878e1/: run_get_webgestalt.py
_downloads/4a017caf3e8713b10ea9afea138b7ec4/: run_get_gene_expression.py
_downloads/cbdfb2292dce16bb9de22f6f904d4564/: run_get_gene_expression.ipynb
_downloads/cfdc767cd4730d5126869096f64ad8a9/: run_get_webgestalt.ipynb
_sources/: installation.rst.txt
_sources/auto_examples/: index.rst.txt  run_get_gene_expression.rst.txt  run_get_webgestalt.rst.txt  sg_execution_times.rst.txt
auto_examples/: index.html  run_get_gene_expression.html  run_get_webgestalt.html  sg_execution_times.html
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  links.inc
examples/: README.rst  create_submit_files.py  job1.py  job2.py  job3.py  job4.py  run_analysis_allinone.py  run_get_gene_expression.py  run_get_webgestalt.py  run_in_venv.sh
examples/data/: Power_5mm.nii  rehoavg.txt
nimgen/: __init__.py  _version.py  aggregation.py  codecov.yml  expressions.py  logutils.py  nimgen.py  smash.py  statistics.py  utils.py  web.py  webgestalt.py
nimgen/pipelines/: HTCondor.py  __init__.py  _file_strings.py  _htcondor_python_strings.py  _htcondor_submit_strings.py  base.py  base_steps.py  htcondor.py
nimgen/pipelines/tests/: test_base.py  test_base_steps.py  test_file_strings.py  test_htcondor.py
nimgen/tests/: test_expressions.py  test_nimgen.py  test_smash.py  test_stats.py  test_utils.py  test_web.py
r_script/: webgestalt.r
